Keep score and report a winner or loser at the end

--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Rock-paper-scissors</title>
 </head>
 <body>
-    <script src="game.js"></script>
+    <script src="playRound.js"></script>
 </body>
 </html>
